tinyc/test/bad/struct-as-bool-and-l.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    s && true;
    return 0;
}
